fix picture on iphone

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,6 @@ body {
   }
 }
 
-
 .navbar {
   border-bottom: 3px solid $secondary-color;
   opacity: 0.8;
@@ -174,7 +173,6 @@ body {
     background-clip: text;
   }
 
-
   .service-box {
     background-color: #fff;
     padding: 1.5rem 1.1rem;
@@ -197,75 +195,72 @@ body {
   }
 }
 
-
 #work {
-.line-mf {
-  width: 100px;
-  height: 1px;
-  background-color: #0078ff;
-  margin: 0 auto;
+  .line-mf {
+    width: 100px;
+    height: 1px;
+    background-color: #0078ff;
+    margin: 0 auto;
+  }
+
+  .work-box {
+    margin-bottom: 3rem;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #fff;
+  }
+
+  .work-box:hover img {
+    transform: scale(1.3);
+  }
+
+  .work-img {
+    display: block;
+    overflow: hidden;
+  }
+
+  .work-img img {
+    transition: all 1s;
+  }
+
+  .work-content {
+    padding: 2rem 3% 1rem 4%;
+  }
+
+  .work-content .w-more {
+    color: #4e4e4e;
+    font-size: 0.8rem;
+  }
+
+  .work-content .w-more .w-ctegory {
+    color: #0078ff;
+  }
+
+  .work-content .w-like {
+    font-size: 2.5rem;
+    color: #0078ff;
+    float: right;
+  }
+
+  .work-content .w-like a {
+    color: #0078ff;
+  }
+
+  .work-content .w-like .num-like {
+    font-size: 0.7rem;
+  }
+
+  .w-title {
+    font-size: 1.2rem;
+  }
 }
-
-.work-box {
-  margin-bottom: 3rem;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background-color: #fff;
-}
-
-.work-box:hover img {
-  transform: scale(1.3);
-}
-
-.work-img {
-  display: block;
-  overflow: hidden;
-}
-
-.work-img img {
-  transition: all 1s;
-}
-
-.work-content {
-  padding: 2rem 3% 1rem 4%;
-}
-
-.work-content .w-more {
-  color: #4e4e4e;
-  font-size: .8rem;
-}
-
-.work-content .w-more .w-ctegory {
-  color: #0078ff;
-}
-
-.work-content .w-like {
-  font-size: 2.5rem;
-  color: #0078ff;
-  float: right;
-}
-
-.work-content .w-like a {
-  color: #0078ff;
-}
-
-.work-content .w-like .num-like {
-  font-size: .7rem;
-}
-
-.w-title {
-  font-size: 1.2rem;
- }
-}
-
-
 
 #random-quotes {
   position: relative;
   min-height: 200px;
   width: 100%;
   height: 100%;
-  background: url('../img/quote.jpg');
+  background-image: url("../img/quote.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -277,7 +272,6 @@ body {
     color: black;
   }
 }
-
 
 #main-footer {
   background: url("../img/footer_bg.jpg") no-repeat scroll top left/cover;
